		(Contributed by Jong Wook Kim<jongwook@nyu.edu>, committed by DOYUNG YOON)

    S2GRAPH-74: Add a script that starts/stops a local hbase server.
		(Contributed by Jong Wook Kim<jongwook@nyu.edu>, committed by DOYUNG YOON)

    S2GRAPH-75: Use an embedded database as the default metadata storage.
		(Contributed by Jong Wook Kim<jongwook@nyu.edu>, committed by DOYUNG YOON)

    S2GRAPH-81: Separate Serializable's toKeyValues into 3, toRowKey, toQualifier, toValue. (Committed by DOYUNG YOON).

    S2GRAPH-88: Add DISCLAIMER, LICENSE, NOTICE on packaging process.
		(Contributed by Jong Wook Kim<jongwook@nyu.edu>, committed by DOYUNG YOON)
    
    S2GRAPH-89: Change version number on project. (Committed by DOYUNG YOON).
    
    S2GRAPH-91: Remove custom repository on project's build.sbt (Committed by DOYUNG YOON).
    
    S2GRAPH-93: Remove MySQL JDBC driver (Committed by DOYUNG YOON).
    
    S2GRAPH-98: Make test cases on multiple projects run sequentially (Committed by DOYUNG YOON).
    
    S2GRAPH-99: Reduce number of test run on test cases on org.apache.s2graph.rest.play.benchmark (Committed by DOYUNG YOON).

    S2GRAPH-96: Remove unmanaged dependencies(asynchbase) and speficy it on build.sbt. (Committed by DOYUNG YOON).
    
    S2GRAPH-97: Add KEYS file (Committed by DOYUNG YOON).

    S2GRAPH-95: Add sbt-pgp plugin on plugins.sbt (Committed by DOYUNG YOON).

    S2GRAPH-92: Add proper license headers on files with unknown licenses (Committed by DOYUNG YOON).

    S2GRAPH-100: Add BUILD.md to explain how to package from source, then add it into REAME.md (Committed by DOYUNG YOON).
    
    S2GRAPH-94: Add description for project layout on REAME.
		(Contributed by Jong Wook Kim<jongwook@nyu.edu>, committed by DOYUNG YOON).

    S2GRAPH-103: Remove dependencies on custom fork of asynchbase (Committed by DOYUNG YOON).

  TEST
    
    S2GRAPH-21: Change PostProcessBenchmarkSpec not to store and fetch test data from storage. (Committed by DOYUNG YOON).
