@@ -22,8 +22,8 @@ object Common {
   lazy val sparkVersion = "1.4.1"
   lazy val playVersion = "2.3.10"
 
-  lazy val hbaseVersion = "1.0.1"
+  lazy val hbaseVersion = "1.2.2"
   //  lazy val hbaseVersion = "1.0.0-cdh5.4.5"
-  lazy val hadoopVersion = "2.7.0"
+  lazy val hadoopVersion = "2.7.3"
   //  lazy val hadoopVersion = "2.6.0-cdh5.4.5"
 }
