@@ -41,7 +41,7 @@ object Config {
 
   //KAFKA
   lazy val KAFKA_METADATA_BROKER_LIST = conf.getString("kafka.metadata.broker.list").getOrElse("localhost")
-  lazy val KAFKA_PRODUCER_POOL_SIZE = conf.getInt("kafka.producer.pool.size").getOrElse(0)
+
   lazy val KAFKA_LOG_TOPIC = s"s2graphIn${PHASE}"
   lazy val KAFKA_LOG_TOPIC_ASYNC = s"s2graphIn${PHASE}Async"
   lazy val KAFKA_FAIL_TOPIC = s"s2graphIn${PHASE}Failed"
