@@ -171,6 +171,8 @@ Release 0.12.1 - unreleased
 
     S2GRAPH-103: Remove dependencies on custom fork of asynchbase (Committed by DOYUNG YOON).
 
+    S2GRAPH-102: Add more configuration optoins in application.conf (Committed by DOYUNG YOON).
+
   TEST
     
     S2GRAPH-21: Change PostProcessBenchmarkSpec not to store and fetch test data from storage. (Committed by DOYUNG YOON).
